# Object-Labeling-Toolkit

./: .gitignore  CMakeLists.txt  ChangeLog.txt  LICENSE  README.md
Examples of configuration files/: Label_rawlog.conf  Process_rawlog.conf
apps/: benchmark.cpp  calibrate.cpp  dataset_statistics.cpp  label_rawlog.cpp  label_scene.cpp  mapping.cpp  process_rawlog.cpp  visualize_reconstruction.cpp
libs/core/: CMakeLists.txt
libs/labeling/: CMakeLists.txt
libs/mapping/: CMakeLists.txt
libs/processing/: CAnalyzer.cpp  CAnalyzer.hpp  CEditor.cpp  CEditor.hpp  CMakeLists.txt  processing.hpp
share/olt/config_files/: Dataset_statistics.conf  Label_scene.conf  Process_rawlog.conf
src/: calibrate.cpp  create_video.cpp  dataset_statistics.cpp  label_rawlog.cpp  label_scene.cpp  label_scene.cpp.autosave  localization.cpp  localization.cpp.autosave  process_rawlog.cpp  process_rawlog.cpp.autosave  segmentation.cpp  sequential_visualization.cpp  visualize_reconstruction.cpp
